# perception_adr

./: .gitignore  README.md  datasets.txt  progress.txt  requirements.txt
cpp_pipeline/: CMakeLists.txt
cpp_pipeline/include/: ekf.h  pipeline_utils.h  vision_pipeline.h
cpp_pipeline/src/: ekf.cpp  main.cpp  verify_pipeline.cpp  vision_pipeline.cpp
datasets/: yolo_gate.yaml
docs/: note.txt  setup.md
notes/: phases.md
simulation/: generate_dataset.py  generate_synthetic_gates.py  replay_uzh.py  simulate_drone.py  test_on_uzh.py  train_yolo.py
simulation/runs/: results.csv  uzh_test_results.txt
